SERVER-110919 Ban hint on '_id_' for timeseries collections (#41961)

GitOrigin-RevId: 4d73214d504aa32e91911ae0fe40fbe87af9a039